coffeebreak-kubernetes/settings/coffeebreak-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: coffeebreak-static
    networking.gke.io/managed-certificates: coffeebreak-certificate
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
    cloud.google.com/backend-config: '{"default": "my-backendconfig"}'
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: heimdall
          servicePort: 80
      - path: /room
        backend:
          serviceName: backend
          servicePort: 60000
      - path: /room/*
        backend:
          serviceName: backend
          servicePort: 60000
      - path: /rooms
        backend:
          serviceName: room-repository
          servicePort: 3011
      - path: /rooms/*
        backend:
          serviceName: room-repository
          servicePort: 3011
      - path: /users
        backend:
          serviceName: user-repository
          servicePort: 3010
      - path: /users/*
        backend:
          serviceName: user-repository
          servicePort: 3010
      - path: /users/user/*
        backend:
          serviceName: user-repository
          servicePort: 3010
